# mender-sdk-python

./: README.md  pyproject.toml
src/mender_sdk/: __init__.py  client.py  exceptions.py
src/mender_sdk/clients/: __init__.py  base.py  deployments.py  inventory.py
src/mender_sdk/models/: __init__.py  common.py  deployments.py  inventory.py
src/mender_sdk/utils/: __init__.py  http.py  retry.py
tests/: __init__.py  conftest.py  test_client.py  test_deployments.py  test_inventory.py
